utf8proc (2.1.0-1) UNRELEASED; urgency=medium

  * New upstream release

 -- Graham Inggs <ginggs@debian.org>  Fri, 07 Jul 2017 17:18:34 +0200

utf8proc (2.0.2-1) unstable; urgency=medium

  * New upstream release

 -- Peter Colberg <peter@colberg.org>  Sat, 30 Jul 2016 23:21:18 -0400

utf8proc (2.0.1-1) unstable; urgency=medium

  * New upstream release (Closes: #829236)
  * Refresh patch
  * Bump SONAME to libutf8proc2
  * Update debian/libutf8proc2.symbols
  * Update Vcs-* fields to use https
  * Enable bindnow hardening flag
  * Bump Standards-Version to 3.9.8
  * Add debian/gbp.conf for pristine-tar
  * Build depend on unicode-data >= 9.0 and << 9.1 for tests

 -- Peter Colberg <peter@colberg.org>  Sat, 16 Jul 2016 17:15:58 -0400

utf8proc (1.3.1-2) unstable; urgency=medium

  * Relax build-depends version for unicode-data.

 -- Peter Colberg <peter@colberg.org>  Fri, 06 Nov 2015 13:26:14 -0500

utf8proc (1.3.1-1) unstable; urgency=medium

  * Initial release. (Closes: #803681)

 -- Peter Colberg <peter@colberg.org>  Sun, 01 Nov 2015 13:30:40 -0500