@@ -4,8 +4,8 @@ Maintainer: Debian Julia Team <pkg-julia-devel@lists.alioth.debian.org>
 Uploaders: Peter Colberg <peter@colberg.org>, Graham Inggs <ginggs@debian.org>
 Build-Depends: debhelper (>= 9),
                perl,
-               unicode-data (<< 9.1),
-               unicode-data (>= 9.0)
+               unicode-data (<< 10.1),
+               unicode-data (>= 10.0)
 Standards-Version: 3.9.8
 Section: libs
 Homepage: http://julialang.org/utf8proc/
