@@ -3,12 +3,18 @@ Description: Use unicode-data instead of downloading external files
  provided by the packages unicode-data and ttf-unifont, respectively.
 Author: Peter Colberg <peter@colberg.org>
 Forwarded: not-needed
-Last-Update: 2015-11-01
+Last-Update: 2017-07-07
 ---
 This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 --- a/data/Makefile
 +++ b/data/Makefile
-@@ -25,6 +25,6 @@
+@@ -20,13 +20,13 @@
+ 	$(RUBY) data_generator.rb < UnicodeData.txt > $@
+ 
+ # GNU Unifont version for font metric calculations:
+-UNIFONT_VERSION=9.0.04
++UNIFONT_VERSION=10.0.02
+ 
  unifont.ttf:
 -	$(CURL) $(CURLFLAGS) -o $@ $(URLCACHE)https://mirrors.kernel.org/gnu/unifont/unifont-$(UNIFONT_VERSION)/unifont-$(UNIFONT_VERSION).ttf
 +	cp /usr/share/fonts/truetype/unifont/unifont.ttf $@
@@ -17,7 +23,15 @@ This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 -	$(CURL) $(CURLFLAGS) -o $@ $(URLCACHE)https://mirrors.kernel.org/gnu/unifont/unifont-$(UNIFONT_VERSION)/unifont_upper-$(UNIFONT_VERSION).ttf
 +	cp /usr/share/fonts/truetype/unifont/unifont_upper.ttf $@
  
-@@ -40,24 +40,24 @@
+ %.sfd: %.ttf
+ 	$(FONTFORGE) -lang=ff -c "Open(\"$<\");Save(\"$@\");Quit(0);"
+@@ -35,31 +35,31 @@
+ 	$(JULIA) charwidths.jl > $@
+ 
+ # Unicode data version
+-UNICODE_VERSION=9.0.0
++UNICODE_VERSION=10.0.0
+ 
  UnicodeData.txt:
 -	$(CURL) $(CURLFLAGS) -o $@ -O $(URLCACHE)http://www.unicode.org/Public/$(UNICODE_VERSION)/ucd/UnicodeData.txt
 +	cp /usr/share/unicode/UnicodeData.txt $@
@@ -50,3 +64,5 @@ This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 -	$(CURL) $(CURLFLAGS) $(URLCACHE)http://www.unicode.org/Public/$(UNICODE_VERSION)/ucd/auxiliary/GraphemeBreakTest.txt | $(PERL) -pe 's,÷,/,g;s,×,+,g' > $@
 +	$(PERL) -pe 's,÷,/,g;s,×,+,g' < /usr/share/unicode/auxiliary/GraphemeBreakTest.txt > $@
  
+ clean:
+ 	rm -f UnicodeData.txt EastAsianWidth.txt GraphemeBreakProperty.txt DerivedCoreProperties.txt CompositionExclusions.txt CaseFolding.txt NormalizationTest.txt GraphemeBreakTest.txt CharWidths.txt unifont*.ttf unifont*.sfd
